Bug 407843 - There's no point in passing a bms to lms.createLivemarkFolderOnly/lms._createFolder, r=dietrich, a=schrep