toolkit/components/places/tests/unit/test_exclude_livemarks.js
@@ -67,7 +67,7 @@ var root = bmsvc.bookmarksRoot;
 // main
 function run_test() {
   var livemarkId = 
-    lmsvc.createLivemarkFolderOnly(bmsvc, root, "foo",
+    lmsvc.createLivemarkFolderOnly(root, "foo",
                                    uri("http://example.com/"),
                                    uri("http://example.com/rss.xml"), -1);
 
